RESOLVED FIXED243485
[LFC][IFC] Empty generated content should not prevent margin collapsing
https://bugs.webkit.org/show_bug.cgi?id=243485
Summary [LFC][IFC] Empty generated content should not prevent margin collapsing
alan
Reported 2022-08-02 21:28:16 PDT
ssia
Attachments
Patch (7.29 KB, patch)
2022-08-02 21:39 PDT, alan
no flags
Patch (18.31 KB, patch)
2022-08-03 07:09 PDT, alan
no flags
alan
Comment 1 2022-08-02 21:39:12 PDT
alan
Comment 2 2022-08-03 07:09:13 PDT
EWS
Comment 3 2022-08-03 09:32:06 PDT
Committed 253079@main (fe9010d46648): <https://commits.webkit.org/253079@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461378 [details].
Radar WebKit Bug Importer
Comment 4 2022-08-03 09:34:01 PDT
Note You need to log in before you can comment on or make changes to this bug.