[LFC][IFC] Empty generated content should not prevent margin collapsing https://bugs.webkit.org/show_bug.cgi?id=243485

Reviewed by Antti Koivisto.

In some cases (e.g. pseudo content with '') we construct empty InlineTextItems (they are required so that we keep layout boxes and inline items synced). These truly empty inline items should be collapsed at InlineLine::append so that they don't show up on the line box as (blank) text runs (and make the iterator believe there's content on the line, which in turn prevents margin collapsing).
(This makes content: ''; behave as content: ' '; (provided collapsing is allowed))

* LayoutTests/fast/inline/incorrect-content-height-with-empty-generated-content-expected.html: Added.
* LayoutTests/fast/inline/incorrect-content-height-with-empty-generated-content.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
* Source/WebCore/layout/formattingContexts/inline/InlineTextItem.cpp:
(WebCore::Layout::InlineTextItem::InlineTextItem):
* Source/WebCore/layout/formattingContexts/inline/InlineTextItem.h:
(WebCore::Layout::InlineTextItem::isEmpty const):
(WebCore::Layout::InlineTextItem::createEmptyItem):

Canonical link: https://commits.webkit.org/253079@main